# deafrica-scripts

./: .flake8  .gitignore  Dockerfile  README.md  actions.yml  docker-compose.yml  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg
.github/workflows/: build-test-docker.yml  deafrica-tools-image.yml  test-monitoring-tools.yml
check-dead-queues/: Dockerfile  README.md  check-dead-queues.py
data/tests/: test_chirps.py
data/tools/: chirps.py
deafrica/: _version.py  click_options.py  easi_assemble.py  inventory.py  io.py  logs.py  utils.py
deafrica/data/: alos_palsar.py  chirps.py  copernicus.py  copernicus_cci.py  copernicus_gls.py  copernicus_land_cover.py  create_mosaic.py  easi_assemble.py  esa_worldcereal.py  gmw.py  gmw_update.py  s3_to_dc_v2.py  wapor_v3.py  wsf.py
deafrica/data/cgls_lwq/: constants.py  download_cogs.py  filename_parser.py  geotiff.py  metadata_generator.py  netcdf.py  prepare_metadata.py  tiles.py
deafrica/data/esa_worldcereal/: constants.py  download_cogs.py  geotiff.py  metadata_generator.py  prepare_metadata.py
deafrica/data/indexing_tools/: s3_to_dc_v2.py  stac_to_eo3.py
deafrica/monitoring/: 1-s2_gap_report.ipynb  archive_scenes.py  check_dead_queues.py  find_duplicate_scenes.py  gap_report.py  index_missing_odc_scenes.py  landsat_gap_filler.py  landsat_gap_report.py  latency_check.py  readme.md  s1_gap_filler.py  s1_gap_report.py  s2_c1_gap_filler.py  s2_c1_gap_report.py  s2_c1_index_missing_odc.py  s2_gap_filler.py  s2_gap_report.py  s2_index_missing_odc.py  sentinel-s2-l2a.json
deafrica/platform/: sandbox_cognito_userpool_report.py  sandbox_users_report.py  sandbox_volume_cleanup.py  sandbox_weekly_cost_report.py  warn_sandbox_unused_volumes.py  warn_unused_sandbox_volumes.py
deafrica/tests/: conftest.py  test_chirps.py  test_chirps_non_gz.py  test_copernicus.py  test_landsat_gap_filler.py  test_landsat_gap_report.py  test_latency_checker.py  test_s2_gap_filler.py  test_s2_gap_report.py  test_sandbox_cognito_userpool_report.py  test_tools.py
deafrica/tests/data/sentinel_2/: 2021-08-17_gap_report_update.json  fake_stac.json
deafrica_automation_tools/: check-dead-queues.py  check_dead_queues.py  landsat_gap_filler.py  s2_gap_filler.py  utils.py
k8s/archive/: 2018-cogging.yaml  README.md  c2-fc-add-to-alchemist.yaml  c2-small-wofs-add-to-alchemist.yaml  c2-wofs-dev-terrain-add-to-alchemist.yaml  deployment-processqueue-alchemist-test.yaml  eo-datasets-job.yaml  stats-wofs.md  test-sqs-autoscaler-add-to-alchemist.yaml  test-sqs-autoscaler-processqueue-alchemist.yaml  wofs_annual.yaml  x-dev-collection2.yaml
misc/: check_orphans.py  collection2cog.py  detect_s2_partial_scenes.py  double_slash_report.py  landsat_l2_prepare.py  s2-find-dupes.py  to_remove.txt
monitoring/tests/: conftest.py  test_s2_gap_filler.py  test_s2_gap_report.py  test_tools.py
monitoring/tests/data/inventory/: missing_data_manifest.json
monitoring/tools/: check_dead_queues.py  chirps.ipynb  chirps.py  s2_gap_filler.py  s2_gap_report.py  utils.py
scripts/data/: srtm_stac_creation.ipynb
scripts/k8s/archive/: africa-dev-pod.yaml  africa-processqueue-alchemist.yaml  c2-wofs-add-to-alchemist.yaml  deployment-processqueue-alchemist.yaml  fc-dev-collection2.yaml  indexing_collection2.md  sp0001-2017-cogging.yaml  sp0001dl-2017-cogging.yaml
scripts/misc/: archive_datasets.sh  archive_landsat_orphans.sh  check_landsat_orphans.py  check_orphans.py  cleanup_landsat_orphans.sh  delete_landsat_archived_scenes.sh  detect_s2_partial_scenes.py  double_slash_report.py  identify_missing_scenes.md  landsat_l2_prepare.py  s2-find-dupes.py  s2_fix_contenttype.py  spatial_footprint_orphaned_scenes.ipynb
scripts/misc/odc-product-archive/: README.md  archive_odc_product.py  archive_product .sh
scripts/odc-product-archive/: README.md  archive_odc_product.py  archive_product .sh
tests/: tests.py
tools/: _version.py  utils.py
tools/data/: chirps.py
tools/monitoring/: check_dead_queues.py  landsat_gap_filler.py  landsat_gap_report.py  readme.md  s2_gap_filler.py  s2_gap_report.py  setup.cfg
tools/monitoring/tools/: check_dead_queues.py  get_missing_scenes.py  s2_gap_filler.py  utils.py
tools/tests/: conftest.py  test_chirps.py  test_landsat_gap_filler.py  test_landsat_gap_report.py  test_s2_gap_filler.py  test_s2_gap_report.py  test_tools.py  tests.py
tools/tests/data/: fake_stac.json
tools/tests/data/landsat/: landsat_5_2021-08-16_gap_report_update.json
tools/utils/: utils.py
