[metadata]
name = deafrica
author = DE Africa Team
author_email = systems@digitalearthafrica.org
description = Scripts, tools and automation for DE Africa
long_description = file: README.md
long_description_content_type = text/markdown
url =
project_urls =
classifiers =
    Programming Language :: Python :: 3

[options]
include_package_data = true
zip_safe = false
setup_requires = setuptools_scm
packages = find_namespace:
python_requires = >=3.6
install_requires =
    boto3
    click
    cdsapi
    datacube
    geopandas
    kubernetes
    requests
    odc-algo
    odc-cloud
    odc-stac
    pandas
    pystac
    pyarrow
    rasterio
    requests
    rio_cogeo
    rio_stac
    rtree
    ruamel.yaml
    sentinelhub
    setuptools-scm
    urlpath

[options.entry_points]
console_scripts =
    s1-gap-report = deafrica.monitoring.s1_gap_report:cli
    check-dead-queue = deafrica.monitoring.check_dead_queues:cli
    s2-gap-filler = deafrica.monitoring.s2_gap_filler:cli
    s2-gap-report = deafrica.monitoring.s2_gap_report:cli
    landsat-gap-report = deafrica.monitoring.landsat_gap_report:cli
    landsat-gap-filler = deafrica.monitoring.landsat_gap_filler:cli
    latency-check = deafrica.monitoring.latency_check:cli
    download-chirps = deafrica.data.chirps:cli_monthly
    download-chirps-daily = deafrica.data.chirps:cli_daily
    download-gmw = deafrica.data.gmw:cli
    create-mosaic = deafrica.data.create_mosaic:cli
    download-alos-palsar = deafrica.data.alos_palsar:cli
    download-alos-palsar-dump-tiles = deafrica.data.alos_palsar:dump_tiles
    download-cop-gls = deafrica.data.copernicus_gls:cli
    download-cop-cci = deafrica.data.copernicus_cci:cli
    delete-sandbox-volumes = deafrica.platform.sandbox_volume_cleanup:cli
    warn-unused-sandbox-volumes = deafrica.platform.warn_unused_sandbox_volumes:cli
    download-wsf = deafrica.data.wsf:cli

[options.packages.find]
include =
    deafrica*
exclude =
    deafrica.tests*
