[metadata]
name = deafrica
author = DE Africa Team
author_email = systems@digitalearthafrica.org
description = Scripts, tools and automation for DE Africa
long_description = file: README.md
long_description_content_type = text/markdown
url =
project_urls =
classifiers =
    Programming Language :: Python :: 3

[options]
include_package_data = true
zip_safe = false
setup_requires = setuptools_scm
packages = find_namespace:
python_requires = >=3.6
install_requires =
    aiohttp>=3.12.14
    boto3
    click
    cdsapi>=0.7.4
    datacube
    eodatasets3
    cftime
    fsspec[full]
    geojson
    geopandas
    kubernetes
    requests
    odc-algo
    odc-cloud[ASYNC]
    odc-dscache
    odc-geo
    odc-stac
    odc-apps-dc-tools>=1.9.7
    openpyxl
    pandas
    pillow>=11.3.0
    psycopg2
    pystac
    pyarrow
    rasterio
    requests
    rio_cogeo
    rio_stac
    rioxarray
    rtree
    ruamel.yaml
    sentinelhub
    setuptools-scm
    xarray[complete]
    yarl

[options.entry_points]
console_scripts =
    delete-sandbox-volumes = deafrica.platform.sandbox_volume_cleanup:cli
    warn-unused-sandbox-volumes = deafrica.platform.warn_unused_sandbox_volumes:cli
    sandbox-users-report = deafrica.platform.sandbox_cognito_userpool_report:cli
    check-dead-queue = deafrica.monitoring.check_dead_queues:cli
    latency-check = deafrica.monitoring.latency_check:cli
    s1-gap-report = deafrica.monitoring.s1_gap_report:cli
    s1-gap-filler = deafrica.monitoring.s1_gap_filler:cli
    landsat-gap-report = deafrica.monitoring.landsat_gap_report:cli
    landsat-gap-filler = deafrica.monitoring.landsat_gap_filler:cli
    s2-gap-report = deafrica.monitoring.s2_gap_report:cli
    s2-gap-filler = deafrica.monitoring.s2_gap_filler:cli
    s2-c1-gap-report = deafrica.monitoring.s2_c1_gap_report:cli
    s2-c1-gap-filler = deafrica.monitoring.s2_c1_gap_filler:cli
    create-mosaic = deafrica.data.create_mosaic:cli
    download-alos-palsar = deafrica.data.alos_palsar:cli
    download-alos-palsar-dump-tiles = deafrica.data.alos_palsar:dump_tiles
    download-chirps = deafrica.data.chirps:cli_monthly
    download-chirps-daily = deafrica.data.chirps:cli_daily
    download-cop-cci = deafrica.data.copernicus_cci:cli
    download-cop-gls = deafrica.data.copernicus_gls:cli
    download-esa-worldcereal-cogs = deafrica.data.esa_worldcereal.download_cogs:download_cogs
    create-esa-worldcereal-stac = deafrica.data.esa_worldcereal.metadata_generator:create_stac_files
    download-cgls-lwq-cogs=deafrica.data.cgls_lwq.download_cogs:download_cogs
    create-cgls-lwq-stac=deafrica.data.cgls_lwq.metadata_generator:create_stac_files
    download-gmw = deafrica.data.gmw:cli
    create-wapor-v3-stac = deafrica.data.wapor_v3:create_wapor_v3_stac
    download-wsf = deafrica.data.wsf:cli
    index-missing-odc-scenes = deafrica.monitoring.index_missing_odc_scenes:cli
[options.packages.find]
include =
    deafrica*
exclude =
    deafrica.tests*

[flake8]
max-line-length = 88
extend-ignore = E203,E701,E266,E501